<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:gravity="bottom"
    android:layoutDirection="locale"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:backgroundTint="?attr/colorPrimary"
        app:fabSize="mini"
        app:srcCompat="@drawable/ic_close_black_24dp"
        app:tint="?attr/colorControlNormal" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-18dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_language_label"
                        android:textAppearance="?attr/textAppearanceTitleMedium"
                        android:textStyle="bold" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/language_chip_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:layout_marginBottom="@dimen/spacing_large"
                        app:selectionRequired="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_en"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/english_label" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_fa"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/persian_label" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_es"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/spanish_label" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_fr"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/french_label" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_ar"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/arabic_label" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_zh"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chinese_label" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_hi"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hindi_label" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_ka"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/georgian_label" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_az"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/azerbaijan_label" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_tr"
                            style="@style/Widget.Material3.Chip.Filter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/turkish_label" />

                    </com.google.android.material.chip.ChipGroup>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/night_mode_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="@dimen/spacing_large"
                        android:text="@string/night_mode_label" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_medium" />

                    <LinearLayout
                        android:id="@+id/toggle_info_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="?attr/actionBarSize"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/application_info_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:id="@+id/toggle_info_button"
                            android:layout_width="?attr/actionBarSize"
                            android:layout_height="?attr/actionBarSize"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            app:srcCompat="@drawable/ic_keyboard_arrow_down_black_24dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/expand_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/text_application_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/HeadlineTextStyle"
                            android:text="@string/developer_info_title" />

                        <TextView
                            android:id="@+id/text_developer_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/HeadlineTextStyle"
                            android:text="@string/design_api_title" />

                        <TextView
                            android:id="@+id/text_design_api"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/HeadlineTextStyle"
                            android:text="@string/libraries_title" />

                        <TextView
                            android:id="@+id/text_libraries"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            style="@style/HeadlineTextStyle"
                            android:text="@string/license_title" />

                        <TextView
                            android:id="@+id/text_license"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />


                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>